[project]
name = "correctionlib-gradients-at-agc-demo-day"
version = "1"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC BY 4.0" }
keywords = []
authors = [
  { name = "Enrico Guiraud", email = "enrico.guiraud@pm.me" },
]
dependencies = [
  "correctionlib-gradients>=0.2.1",
  "jupyter",
]
